# Vision-based-Manipulation

./: README.md
project/: README.md
project/franka_description/robots/: panda_arm_camera.xacro  panda_arm_hand.urdf.xacro
project/panda_simulation/: CMakeLists.txt  package.xml
project/panda_simulation/launch/: panda_simulation.launch  spawn_table.launch
project/panda_simulation/meshes/: pudding.dae
project/panda_simulation/models/table_short/: model.config  model.sdf
project/panda_simulation/scripts/: move_franka.py
project/panda_simulation/src/: pcl_processing.cpp
project/panda_simulation/urdf/: drill.urdf  mustard.urdf  pudding.urdf
project/panda_simulation/worlds/: table.world
visual_servoing/: CMakeLists.txt  README.md  package.xml
visual_servoing/launch/: vb_publish_joint_pose_and_vel.launch
visual_servoing/scripts/: vbm_visual_servoing.py  vbmbot_joint_controller.py
visual_servoing/urdf/: boxobjecthw04.urdf
